[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Resources/ResourceDeposits/aetheric-iron-small.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MineralDeposit.gd" type="Script" id=2]
[ext_resource path="res://Scenes/ResourceDeposits/ResourceDrop.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/SFX/Rock Breaking.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/Rock Shatter.mp3" type="AudioStream" id=5]

[node name="AethericIronSmall" type="Area2D"]
collision_layer = 4
collision_mask = 16
script = ExtResource( 2 )
size = 2
resource_drop = ExtResource( 3 )

[node name="DepositSprite" type="Sprite" parent="."]
position = Vector2( -10, -140 )
texture = ExtResource( 1 )

[node name="DepositCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -90, 0, -80, -50, -50, -70, -30, -120, 30, -140, 50, -90, 70, -80, 90, -20, 100, 0 )

[node name="DepositCrack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="DepositBreak" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
