[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Placeholders/mineral-deposit-ground.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MineralDeposit.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 40 )

[node name="MineralDeposit" type="Area2D" groups=["MineralDeposit"]]
collision_layer = 4
collision_mask = 16
script = ExtResource( 2 )

[node name="MineralDepositSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="MineralCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 20 )
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_MineralDeposit_area_entered"]
